--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,7 @@
     "no-loop-func": 0,
     "consistent-return": 0,
     "array-callback-return": 0,
-    "prefer-destructuring": 0
+    "prefer-destructuring": 0,
+    "linebreak-style": 0
   }
 }
