--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "swagger2openapi": "^5.4.0"
   },
   "scripts": {
-    "build": "cross-env NODE_ENV='development' NODE_OPTIONS=--openssl-legacy-provider webpack",
-    "serve": "webpack-dev-server --mode=development",
-    "serve-everyone": "webpack-dev-server --mode=development --host 0.0.0.0",
+    "build": "cross-env NODE_ENV='production' NODE_OPTIONS=--openssl-legacy-provider webpack",
+    "serve": "cross-env NODE_OPTIONS=--openssl-legacy-provider webpack-dev-server --mode=development",
+    "serve-everyone": "cross-env NODE_OPTIONS=--openssl-legacy-providerwebpack-dev-server --mode=development --host 0.0.0.0",
     "lint": "./node_modules/eslint/bin/eslint.js ./src/**/*.js",
     "lint-fix": "./node_modules/eslint/bin/eslint.js --fix ./src/**/*.js"
   },
